3rdparty/AvaSpecDLL-setup32/MAINDIR/examples/vcpp2008/avaspec.h

#define     USER_ID_LEN             64
#define     MAX_TEMP_SENSORS        3
#define     NR_TEMP_POL_COEF        5
#define     NR_DAC_POL_COEF         2
typedef long  AvsHandle;
typedef enum
{
        UNKNOWN,
        USB_AVAILABLE,
        USB_IN_USE_BY_APPLICATION,
        USB_IN_USE_BY_OTHER,
		ETH_AVAILABLE,
		ETH_IN_USE_BY_APPLICATION,
		ETH_IN_USE_BY_OTHER,
		ETH_ALREADY_IN_USE_USB
} DEVICE_STATUS;
typedef enum {
    RS232,
    USB5216,
    USBMINI,
    USB7010,
    ETH7010
} InterfaceType;
typedef struct 
{
    char            SerialNumber[AVS_SERIAL_LEN];
    char            UserFriendlyName[USER_ID_LEN];
    unsigned char   Status;
} AvsIdentityType;
typedef uint8 SensorType;
typedef struct
{
    SensorType              m_SensorType;
    uint16                  m_NrPixels;
    float                   m_aFit[NR_WAVELEN_POL_COEF];
    bool                    m_NLEnable;
    double                  m_aNLCorrect[NR_NONLIN_POL_COEF];
    double                  m_aLowNLCounts;
    double                  m_aHighNLCounts;
    float                   m_Gain[MAX_VIDEO_CHANNELS];
    float                   m_Reserved;
    float                   m_Offset[MAX_VIDEO_CHANNELS];
    float                   m_ExtOffset;
    uint16                  m_DefectivePixels[NR_DEFECTIVE_PIXELS];
} DetectorType;
typedef struct
{
    uint16                  m_SmoothPix;
    uint8                   m_SmoothModel;
} SmoothingType;
typedef struct
{
    SmoothingType           m_Smoothing;
    float                   m_CalInttime;
    float                   m_aCalibConvers[MAX_NR_PIXELS];
} SpectrumCalibrationType;
typedef struct
{
    SpectrumCalibrationType m_IntensityCalib;
    uint8                   m_CalibrationType;
    uint32                  m_FiberDiameter;
} IrradianceType;
typedef struct
{
    float                   m_aSpectrumCorrect[MAX_NR_PIXELS];
} SpectrumCorrectionType;
typedef struct
{
    uint8                   m_Enable;
    uint8                   m_ForgetPercentage;
} DarkCorrectionType;
typedef struct
{
    uint8                   m_Mode;
    uint8                   m_Source;
    uint8                   m_SourceType;
} TriggerType;
typedef struct
{
    uint16                  m_StrobeControl;
    uint32                  m_LaserDelay;
    uint32                  m_LaserWidth;
    float                   m_LaserWaveLength;
    uint16                  m_StoreToRam;
} ControlSettingsType;
typedef struct
{
	unsigned char  InterfaceType;			
	unsigned char  serial[AVS_SERIAL_LEN];  
	unsigned short port;                    
	unsigned char  status;                  
	unsigned int   RemoteHostIp;            
	unsigned int   LocalIp;					
	unsigned char  reserved[4];             
} BroadcastAnswerType;
typedef struct
{
    uint16                  m_StartPixel;			
    uint16                  m_StopPixel;            
    float                   m_IntegrationTime;      
    uint32                  m_IntegrationDelay;     
    uint32                  m_NrAverages;			
    DarkCorrectionType      m_CorDynDark;           
    SmoothingType           m_Smoothing;			
    uint8                   m_SaturationDetection;  
    TriggerType             m_Trigger;				
    ControlSettingsType     m_Control;				
} MeasConfigType;
typedef struct
{
    bool                    m_Enable;
    MeasConfigType          m_Meas;
    int16                   m_Nmsr;
} StandAloneType;
typedef struct
{
	int32					m_Nmsr;
	uint8					m_Reserved[8]; 
}DynamicStorageType;
typedef struct
{
    float                   m_aFit[NR_TEMP_POL_COEF];
} TempSensorType;
typedef struct
{
    bool                    m_Enable;
    float                   m_Setpoint;     
    float                   m_aFit[NR_DAC_POL_COEF];
} TecControlType;
typedef struct
{
    float                   AnalogLow[2];
    float                   AnalogHigh[2];
    float                   DigitalLow[10];
    float                   DigitalHigh[10];
} ProcessControlType;
typedef struct 
{
	uint32				 m_IpAddr;
	uint32				 m_NetMask;
	uint32				 m_Gateway;
	uint8				 m_DhcpEnabled;
	uint16				 m_TcpPort;
	uint8				 m_LinkStatus;
} EthernetSettingsType;
typedef struct
{
    uint16                  m_Len;
    uint16                  m_ConfigVersion;
    char                    m_aUserFriendlyId[USER_ID_LEN];
    DetectorType            m_Detector;
    IrradianceType          m_Irradiance;
    SpectrumCalibrationType m_Reflectance;
    SpectrumCorrectionType  m_SpectrumCorrect;
    StandAloneType          m_StandAlone;
    DynamicStorageType		m_DynamicStorage;
    TempSensorType          m_aTemperature[MAX_TEMP_SENSORS];
    TecControlType          m_TecControl;
    ProcessControlType      m_ProcessControl;
	EthernetSettingsType	m_EthernetSettings;
    uint8                   m_aReserved[SETTINGS_RESERVED_LEN];
} DeviceConfigType;
DLL_INT AVS_Init( short a_Port );
DLL_INT AVS_Done( void );
DLL_INT AVS_GetNrOfDevices(void);
DLL_INT AVS_UpdateUSBDevices(void);
DLL_INT AVS_UpdateETHDevices( unsigned int         a_ListSize,
	                          unsigned int*        a_pRequiredSize,
		                      BroadcastAnswerType* a_pList );
DLL_INT AVS_GetList
(
    unsigned int        a_ListSize,
    unsigned int*       a_pRequiredSize,
    AvsIdentityType*    a_pList
);
DLL_AvsHandle AVS_Activate
(
    AvsIdentityType*    a_pDeviceId
);
DLL_bool AVS_Deactivate
(
    AvsHandle    a_hDevice
);
DLL_AvsHandle  AVS_GetHandleFromSerial( char *a_pSerial );
DLL_bool AVS_Register( void *a_Hwnd );
DLL_INT AVS_Measure( AvsHandle a_hDevice, void *a_hWnd, short a_Nmsr );
DLL_INT AVS_Measure( AvsHandle a_hDevice, void (*__Done)(AvsHandle*, int*), short a_Nmsr );
DLL_INT AVS_PrepareMeasure( AvsHandle a_hDevice, MeasConfigType* a_pMeasConfig );
DLL_INT AVS_StopMeasure( AvsHandle a_hDevice );
DLL_INT AVS_PollScan( AvsHandle a_hDevice );
DLL_INT AVS_GetScopeData( AvsHandle a_hDevice, unsigned int* a_pTimeLabel, double* a_pSpectrum );
DLL_INT AVS_GetSaturatedPixels
(
    AvsHandle       a_hDevice,
    unsigned char*  a_pSaturated
);
DLL_INT AVS_GetLambda( AvsHandle a_hDevice, double* a_pWaveLength);
DLL_INT AVS_GetNumPixels( AvsHandle a_hDevice, unsigned short* a_pNumPixels );
DLL_INT AVS_GetParameter
(
    AvsHandle           a_hDevice,
    unsigned int        a_Size,
    unsigned int*   	a_pRequiredSize,
    DeviceConfigType*   a_pDeviceParm
);
DLL_INT AVS_SetParameter
(
    AvsHandle           a_hDevice,
    DeviceConfigType*   a_pDeviceParm
);
DLL_INT AVS_GetVersionInfo
(
    AvsHandle       a_hDevice,
    char*           a_pFPGAVersion,
    char*           a_pFirmwareVersion,
    char*           a_pDLLVersion
);
DLL_INT AVS_GetDLLVersion
(
    char*    a_pVersionString
);
DLL_INT AVS_SetSyncMode
(
	AvsHandle	a_hDevice,
	unsigned char	a_Enable
);
DLL_INT AVS_SetPrescanMode
(
    AvsHandle       a_hDevice,
    bool            a_Prescan
);
DLL_INT AVS_UseHighResAdc
(
    AvsHandle       a_hDevice,
    bool            a_Enable
);
DLL_INT AVS_GetAnalogIn
(
    AvsHandle       a_hDevice,
    unsigned char   a_AnalogInId,
    float*          a_pAnalogIn
);
DLL_INT AVS_GetDigIn
(
    AvsHandle       a_hDevice,
    unsigned char   a_DigInId,
    unsigned char*  a_pDigIn
);
DLL_INT AVS_SetAnalogOut
(
	AvsHandle	a_hDevice,
	unsigned char	a_PortId,
	float		a_Value
);
DLL_INT AVS_SetDigOut
(
    AvsHandle       a_hDevice,
    unsigned char   a_PortId,
    unsigned char   a_Status
);
DLL_INT AVS_SetPwmOut
(
    AvsHandle       a_hDevice,
    unsigned char   a_PortId,
    unsigned long   a_Freq,
    unsigned char   a_Duty
);
DLL_INT AVS_SetSensitivityMode
(
    AvsHandle       a_hDevice,
    uint32          a_SensitivityMode
);
DLL_INT AVS_GetIpConfig( AvsHandle a_hDevice, EthernetSettingsType *a_Data );