3rdparty/AvaSpecDLL-setup32/MAINDIR/examples/vb2008/avsdrv.vb


    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure StandAloneType
        Public m_Enable As Byte
        Public m_Meas As MeasConfigType
        Public m_Nmsr As Short
    End Structure

    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure DynamicStorageType
        Public m_Nmsr As Integer
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=8)> _
        Public reserved() As Byte
    End Structure

    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure TempSensorType
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=NR_TEMP_POL_COEF)> _
        Public m_aFit() As Single
    End Structure

    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure TecControlType
        Public m_Enable As Byte
        Public m_Setpoint As Single
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=NR_DAC_POL_COEF)> _
        Public m_aFit() As Single
    End Structure

    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure ProcessControlType
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=2)> _
        Public AnalogLow() As Single
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=2)> _
        Public AnalogHigh() As Single
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=10)> _
        Public DigitalLow() As Single
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=10)> _
        Public DigitalHigh() As Single
    End Structure

    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure EthernetSettingsType
        Public m_IpAddr As UInteger
        Public m_NetMask As UInteger
        Public m_Gateway As UInteger
        Public m_DhcpEnabled As Byte
        Public m_TcpPort As UShort
        Public m_LinkStatus As Byte
    End Structure


    <StructLayout(LayoutKind.Sequential, Pack:=1)> _
    Public Structure DeviceConfigType
        Public m_Len As UShort '2
        Public m_ConfigVersion As UShort '2
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=USER_ID_LEN)> _
        Public m_aUserFriendlyId() As Byte '1
        Public m_Detector As DetectorType '188
        Public m_Irradiance As IrradianceType '16396
        Public m_Reflectance As SpectrumCalibrationType '16391
        Public m_SpectrumCorrect As SpectrumCorrectionType '16384
        Public m_StandAlone As StandAloneType '50
        Public m_DynamicStorage As DynamicStorageType '12
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=MAX_TEMP_SENSORS)> _
        Public m_aTemperature() As TempSensorType '20*3=60
        Public m_TecControl As TecControlType '13
        Public m_ProcessControl As ProcessControlType
        Public m_EthernetSettings As EthernetSettingsType
        <MarshalAs(UnmanagedType.ByValArray, SizeConst:=SETTINGS_RESERVED_LEN)> _
        Public m_aReserved() As Byte
    End Structure

    Enum DEVICE_STATUS
        UNKNOWN = 0
        USB_AVAILABLE = 1
        USB_IN_USE_BY_APPLICATION = 2
        USB_IN_USE_BY_OTHER = 3
        ETH_AVAILABLE = 4
        ETH_IN_USE_BY_APPLICATION = 5
        ETH_IN_USE_BY_OTHER = 6
        ETH_ALREADY_IN_USE_USB = 7
    End Enum

    <StructLayout(LayoutKind.Sequential, Pack:=1, CharSet:=CharSet.Ansi)> _
    Public Structure AvsIdentityType
        <MarshalAs(UnmanagedType.ByValTStr, SizeConst:=10)> _
        Public SerialNumber As String
        <MarshalAs(UnmanagedType.ByValTStr, SizeConst:=64)> _
        Public UserFriendlyName As String
        Public Status As Byte
    End Structure

    ' Function prototypes

    Declare Function AVS_Init Lib "avaspec" Alias "AVS_Init" (ByVal COMPort As Integer) As Integer
    Declare Function AVS_Done Lib "avaspec" Alias "AVS_Done" () As Integer
    Declare Function AVS_GetNrOfDevices Lib "avaspec" Alias "AVS_GetNrOfDevices" () As Integer
    Declare Function AVS_UpdateUSBDevices Lib "avaspec" Alias "AVS_UpdateUSBDevices" () As Integer
    Declare Function AVS_UpdateETHDevices Lib "avaspec" Alias "AVS_UpdateETHDevices" (ByVal ListSize As UInteger, ByRef RequiredSize As UInteger, <[In](), Out()> ByVal List As BroadcastAnswerType()) As Integer
    Declare Function AVS_GetList Lib "avaspec" Alias "AVS_GetList" (ByVal ListSize As UInteger, ByRef RequiredSize As UInteger, <[In](), Out()> ByVal List As AvsIdentityType()) As Integer
    Declare Function AVS_Activate Lib "avaspec" Alias "AVS_Activate" (ByRef a_DeviceId As AvsIdentityType) As Integer
    Declare Function AVS_Deactivate Lib "avaspec" Alias "AVS_Deactivate" (ByVal DeviceHandle As IntPtr) As Integer
    Declare Function AVS_GetHandleFromSerial Lib "avaspec" Alias "AVS_GetHandleFromSerial" (ByRef Serial As Byte) As Integer
    Declare Function AVS_Register Lib "avaspec" Alias "AVS_Register" (ByVal winID As Integer) As Integer
    Declare Function AVS_PrepareMeasure Lib "avaspec" Alias "AVS_PrepareMeasure" (ByVal DeviceHandle As IntPtr, ByRef MeasConfig As MeasConfigType) As Integer
    Declare Function AVS_Measure Lib "avaspec" Alias "AVS_Measure" (ByVal DeviceHandle As IntPtr, ByVal winID As Integer, ByVal Nmsr As Short) As Integer
    Declare Function AVS_GetLambda Lib "avaspec" Alias "AVS_GetLambda" (ByVal DeviceHandle As IntPtr, ByRef WaveLength As PixelArrayType) As Integer
    Declare Function AVS_GetNumPixels Lib "avaspec" Alias "AVS_GetNumPixels" (ByVal DeviceHandle As IntPtr, ByRef NumPixels As UShort) As Integer
    Declare Function AVS_GetParameter Lib "avaspec" Alias "AVS_GetParameter" (ByVal DeviceHandle As IntPtr, ByVal Size As UInteger, ByRef RequiredSize As UInteger, ByRef DeviceParm As DeviceConfigType) As Integer
    Declare Function AVS_GetSecure Lib "avaspec" Alias "AVS_GetSecure" () As Integer
    Declare Function AVS_GetScopeData Lib "avaspec" Alias "AVS_GetScopeData" (ByVal DeviceHandle As IntPtr, ByRef TimeLabel As UInteger, ByRef pSpectrum As PixelArrayType) As Integer
    Declare Function AVS_GetSaturatedPixels Lib "avaspec" Alias "AVS_GetSaturatedPixels" (ByVal DeviceHandle As IntPtr, ByRef a_pSaturated As SaturatedArrayType) As Integer
    Declare Function AVS_GetAnalogIn Lib "avaspec" Alias "AVS_GetAnalogIn" (ByVal DeviceHandle As IntPtr, ByVal AnalogInId As Byte, ByRef AnalogIn As Single) As Integer
    Declare Function AVS_GetDigIn Lib "avaspec" Alias "AVS_GetDigIn" (ByVal DeviceHandle As IntPtr, ByVal DigInId As Byte, ByRef DigIn As Byte) As Integer
    Declare Function AVS_GetDLLVersion Lib "avaspec" Alias "AVS_GetDLLVersion" () As Integer
    Declare Function AVS_GetVersionInfo Lib "avaspec" Alias "AVS_GetVersionInfo" (ByVal DeviceHandle As IntPtr, ByRef FPGAVersion As String16Type, ByRef FirmwareVersion As String16Type, ByRef DLLVersion As String16Type) As Integer
    Declare Function AVS_SetParameter Lib "avaspec" Alias "AVS_SetParameter" (ByVal DeviceHandle As IntPtr, ByRef DeviceParm As DeviceConfigType) As Integer
    Declare Function AVS_SetSecure Lib "avaspec" Alias "AVS_SetSecure" () As Integer
    Declare Function AVS_SetAnalogOut Lib "avaspec" Alias "AVS_SetAnalogOut" (ByVal DeviceHandle As IntPtr, ByVal PortId As Byte, ByVal Value As Single) As Integer
    Declare Function AVS_SetDigOut Lib "avaspec" Alias "AVS_SetDigOut" (ByVal DeviceHandle As IntPtr, ByVal PortId As Byte, ByVal Status As Byte) As Integer
    Declare Function AVS_PollScan Lib "avaspec" Alias "AVS_PollScan" (ByVal DeviceHandle As IntPtr) As Integer
    Declare Function AVS_SetPwmOut Lib "avaspec" Alias "AVS_SetPwmOut" (ByVal DeviceHandle As IntPtr, ByVal PortId As Byte, ByVal Freq As UInteger, ByVal Duty As Byte) As Integer
    Declare Function AVS_StopMeasure Lib "avaspec" Alias "AVS_StopMeasure" (ByVal DeviceHandle As IntPtr) As Integer
    Declare Function AVS_SetSyncMode Lib "avaspec" Alias "AVS_SetSyncMode" (ByVal DeviceHandle As IntPtr, ByVal Enable As Byte) As Integer
    Declare Function AVS_SetPrescanMode Lib "avaspec" Alias "AVS_SetPrescanMode" (ByVal a_hDevice As IntPtr, ByVal a_Prescan As Boolean) As Integer
    Declare Function AVS_UseHighResAdc Lib "avaspec" Alias "AVS_UseHighResAdc" (ByVal a_hDevice As IntPtr, ByVal a_Enable As Boolean) As Integer
    Declare Function AVS_SetSensitivityMode Lib "avaspec" Alias "AVS_SetSensitivityMode" (ByVal a_hDevice As IntPtr, ByVal a_SensitivityMode As UInteger) As Integer
    Declare Function AVS_GetIpConfig Lib "avaspec" Alias "AVS_GetIpConfig" (ByVal a_hDevice As IntPtr, ByRef a_Data As EthernetSettingsType) As Integer

End Module